# carrier-insolvency-data

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: refresh.yml
data/: events.csv  events.json
fetchers/: __init__.py  fetch.py
src/carrier_insolvency/: __init__.py  dataset.py  models.py  normalize.py  parsers.py  sources.py
tests/: test_dataset.py  test_normalize.py  test_parsers.py
